# YouLearn

./: .dockerignore  .gitignore  README.md  YouLearn.md  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  Makefile  pipe.py  pyproject.toml
backend/modes/: lec.md  rev.md  work.md
backend/src/youlearn/: config.py  context.py  factcheck.py  modes.py  progress.py  server.py
backend/src/youlearn/tools/: composio_drive_tools.py  notebook_tools.py  youcom_tools.py
classes/Math-104/: .fact-check-state.json  .progress-state.json  Makefile  README.md  fact-check-report.json
classes/Math-104/hw/hw1/: assignment.txt
classes/Math-104/hw/hw2/: assignment.txt
classes/Math-104/hw/temp/: hw_template.tex
classes/Math-104/scripts/: README.md  pdf2md  pdf_to_markdown.py  requirements.txt
openwebui/.svelte-kit/: ambient.d.ts
openwebui/src/routes/: +layout.svelte
thoughts/: build-plan.md  youlab-reusable-components.md
thoughts/searchable/: build-plan.md
thoughts/searchable/plans/: 2026-02-06-youlearn-backend-boilerplate.md
thoughts/searchable/shared/plans/: 2026-02-06-composio-googledrive-integration.md  2026-02-06-create-explainer-tool.md  agent-notebook-interaction.md  (+3 more)
thoughts/shared/plans/: 2026-02-06-composio-googledrive-integration.md  2026-02-06-render-backend-deployment.md  2026-02-06-session-progress-agent.md  2026-02-06-show-me-pdf-navigation.md  agent-notebook-interaction.md
thoughts/shared/research/: 2026-02-05-hackathon-sponsor-analysis.md  2026-02-06-composio-agno-googledrive-integration.md  2026-02-06-youcom-factcheck-agent.md
(+62 files in other folders)
