[project]
name = "youlearn"
version = "0.1.0"
description = "YouLearn AI backend"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "agno>=1.4.5",
    "openai>=1.0.0",
    "sse-starlette>=2.0.0",
]

[project.scripts]
youlearn-server = "youlearn.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/youlearn"]
